--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -617,6 +617,7 @@ div[data-item] .tour-card__img {cursor:pointer;}
 .sl-attr-btn.slide-btn {
     background-image: -webkit-linear-gradient(top, #ff8d02, #fd6802);
     background-image: linear-gradient(to bottom, #ff8d02, #fd6802);
+    background-image: linear-gradient(180deg,#17c930 3%,#07b11f);
     color: #FFF;
     font-size: 1.25em;
     border-radius: 25px;
