--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -374,3 +374,6 @@ a.active .show-notactive {display: none;}
     display:inline-block;
 }
 .img-wrapper.logo img {width: 150px;}
+.uploads-error {
+    color: red;
+}
