--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -351,7 +351,7 @@ a.desc:after {
     flex-wrap: wrap;
 }
 .mainimg-wrapper {
-    flex: auto;
+    /*flex: auto;*/
     position: relative;
 }
 .mainimg-wrapper img {
