--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -12,7 +12,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 14px;
-    font-family: 'Core Sans C';
+    font-family: 'Core Sans C'!important;
 }
 
 img {
