--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -36,13 +36,14 @@ header {background: #FFF}
     background-color: #f5f5f5;
     font-size: .9em;
     height: 60px;
+    display: flex;
+    align-items: center;
 }
 
-.footer > .container {
-    padding-right: 15px;
-    padding-left: 15px;
+.footer p {
+    margin: 0;
+    margin-bottom: 0;
 }
-
 .not-set {
     color: #c55;
     font-style: italic;
