--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -1299,6 +1299,9 @@ div[data-item="list"] .u-shading {
     border-right: none;
     border-color: #e9e9e9;
 }
+.flatpickr-calendar {
+    width: 310.875px;
+}
 
 .flatpickr-day {
     min-width: 43px;
